[package]
name = "path_gui_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
communication = { git = "ssh://git@github.com/EMU5-Robotics/communication.git", rev = "db0a2ac922219ae8fce52c88fd9527121b5d66b6" }

eframe = "0.24.1"
egui_plot = "0.24.1"
image = "0.24.7"
egui_extras = "0.24.1"
time = { version = "0.3.31", features = ["formatting", "macros"] }
env_logger = "0.11.2"
log = "0.4.20"

